--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
+  "proxy": "http://r2sus-backend.herokuapp.com/",
   "dependencies": {
     "@amcharts/amcharts5": "^5.2.10",
     "@chakra-ui/icons": "^2.0.2",
